--- a/templates/mail/email.html.twig
+++ b/templates/mail/email.html.twig
@@ -6,11 +6,11 @@
     <div style="margin-top: 20px">
         <p style="text-align: left;">
             Détail de la demande :<br/><br/>
-            Nom: {{ contact.name }}<br/>
-            Email: {{ contact.email }}<br/>
-            Sujet : {{ contact.subject }}<br/>
+            Nom: {{ data.name }}<br/>
+            Email: {{ data.email }}<br/>
+            Sujet : {{ data.subject }}<br/>
             Message: <br/>
-            {{ contact.message }}
+            {{ data.message }}
         </p>
     </div>
 {% endblock %}
