--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -360,15 +360,6 @@ a:hover {
     position: relative;
 }
 
-/*!* Date de la timeline *!
-.timeline-item .timeline-date {
-    font-weight: bold;
-    color: var(--text-primary);
-    position: absolute;
-    left: -120px;
-    top: 0;
-}*/
-
 /* Titre de la timeline */
 .timeline-item h5 {
     font-weight: bold;
@@ -509,28 +500,6 @@ a:hover {
 }
 
 /* Contact */
-/*.contact-form .form-control {*/
-/*    margin-bottom: 30px;*/
-/*    padding: 20px;*/
-/*    height: 55px;*/
-/*    background: var(--light);*/
-/*    border: none;*/
-/*}*/
-
-/*.contact-form .form-control:focus {*/
-/*    background: var(--light);*/
-/*    border-color: var(--primary);*/
-/*}*/
-
-/*.contact-form textarea.form-control {*/
-/*    padding: 20px;*/
-/*    height: 150px;*/
-/*}*/
-
-/*.contact-form .btn {*/
-/*    padding: 15px 40px;*/
-/*}*/
-
 #contact-form {
     background-color: var(--light-bg);
     padding: 30px;
@@ -569,6 +538,35 @@ a:hover {
     border-color: #005B9A !important;
 }
 
+/* Mention */
+#mention .progress {
+    height: 5px;
+    border-radius: 5px;
+}
+
+#mention .progress .progress-bar {
+    width: 0px;
+    border-radius: 5px;
+    transition: 3s;
+}
+
+#mention .nav-pills .nav-link {
+    color: var(--dark);
+}
+
+#mention .nav-pills .nav-link.active {
+    color: #FFFFFF;
+}
+
+#mention .tab-content hr {
+    width: 30px;
+}
+
+/* Nouveau style pour centrer le titre h1 */
+#mention h1 {
+    text-align: center;
+}
+
 /* Footer */
 .footer {
     background-color: #12141D;
@@ -576,10 +574,36 @@ a:hover {
     transition: background-color 0.3s, color 0.3s;
 }
 
-/*[data-bs-theme="dark"] .footer {*/
-/*    background-color: var(--dark-bg);*/
-/*    color: var(--dark-text);*/
-/*}*/
+.footer .row {
+    display: flex;
+    justify-content: space-between; /* Espace équitable entre les éléments */
+    align-items: center; /* Aligne les éléments verticalement au centre */
+    text-align: center;
+}
+
+.footer .footer-links {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 10px;
+}
+
+.footer a {
+    font-size: 10px;
+}
+
+.important-link {
+    font-weight: bold;
+    text-decoration: underline;
+    color: white;
+    transition: 0.3s;
+}
+
+.important-link:hover {
+    color: var(--primary);
+    font-weight: bold;
+    text-decoration: underline;
+}
 
 .footer .btn {
     transition: 0.5s;
@@ -628,14 +652,5 @@ a:hover {
 }
 
 .footer .border-bottom {
-    --bs-border-style: none ! important;
-}
-
-.footer a {
-    font-size: 10px;
-}
-
-/* Back to top */
-bi-top {
-    height: unset !important;
+    --bs-border-style: none !important;
 }
