--- a/templates/_partial/_navbar_mention.html.twig
+++ b/templates/_partial/_navbar_mention.html.twig
@@ -7,17 +7,17 @@
     </button>
     <div class="collapse navbar-collapse justify-content-between py-4 py-lg-0" id="navbarCollapse">
         <div class="navbar-nav ms-auto py-0">
-            <a href="#home" class="nav-item nav-link active">Accueil</a>
-            <a href="#about" class="nav-item nav-link">A propos</a>
-            <a href="#skill" class="nav-item nav-link">Compétences</a>
+            <a href="https://www.jeromesauvage.fr/#home" class="nav-item nav-link active">Accueil</a>
+            <a href="https://www.jeromesauvage.fr/#about" class="nav-item nav-link">A propos</a>
+            <a href="https://www.jeromesauvage.fr/#skill" class="nav-item nav-link">Compétences</a>
         </div>
-        <a href="{{ path('app_home') }}" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block">
+        <a href="https://www.jeromesauvage.fr/" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block">
             <h1 class="text-primary fw-bold m-0">Jérôme Sauvage</h1>
         </a>
         <div class="navbar-nav me-auto py-0">
-            <a href="#service" class="nav-item nav-link">Services</a>
-            <a href="#project" class="nav-item nav-link">Portfolio</a>
-            <a href="#contact" class="nav-item nav-link">Contact</a>
+            <a href="https://www.jeromesauvage.fr/#service" class="nav-item nav-link">Services</a>
+            <a href="https://www.jeromesauvage.fr/#project" class="nav-item nav-link">Portfolio</a>
+            <a href="https://www.jeromesauvage.fr/#contact" class="nav-item nav-link">Contact</a>
         </div>
         <button class="btn btn-link nav-link py-2 px-0 px-lg-2 dropdown-toggle d-flex align-items-center"
                 id="bd-theme"
