--- a/templates/_partial/_project.html.twig
+++ b/templates/_partial/_project.html.twig
@@ -17,7 +17,7 @@
                 <div class="portfolio-img rounded overflow-hidden">
                     <img class="img-fluid" src="{{ asset('assets/img/blog_500x500.png') }}" alt="">
                     <div class="portfolio-btn">
-                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="{{ asset('assets/img/project-1.jpg') }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="{{ asset('assets/img/blog_500x500.png') }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                         <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i class="fa fa-link"></i></a>
                     </div>
                 </div>
