--- a/templates/_partial/_service.html.twig
+++ b/templates/_partial/_service.html.twig
@@ -134,21 +134,22 @@
                 </div>
             </div>
 
-            <!-- Service 7: Outils maitrisé -->
+            <!-- Service 7: Workflow -->
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="service-item d-flex flex-column flex-sm-row bg-white rounded shadow h-100 p-4 p-lg-5">
                     <div class="bg-icon flex-shrink-0 mb-3 circle">
                         <i class="fa fa-toolbox fa-2x"></i>
                     </div>
                     <div class="ms-sm-4">
-                        <h4 class="mb-3">Outils maitrisés</h4>
+                        <h4 class="mb-3">Workflow</h4>
                         <span>Utilisation d’outils de développement avancés pour assurer une mise en production fluide,
-                            ainsi que des logiciels de création graphique et
+                            ainsi que des logiciels de création graphique, d'intelligence artificielle et
                             de gestion de contenu pour optimiser les processus de développement.
                         </span>
                         <ul class="mt-3 service-list">
                             <li><i class="fas fa-tools text-primary me-2"></i>Suite JetBrains</li>
                             <li><i class="fas fa-images text-primary me-2"></i>Photoshop / Illustrator</li>
+                            <li><svg class="bi text-primary me-2"><use href="#chatgpt-icon"></use></svg></i>ChatGPT</li>
                             <li><i class="fab fa-wordpress text-primary me-2"></i>WordPress</li>
                             <li><i class="fab fa-joomla text-primary me-2"></i>Joomla</li>
 
