--- a/templates/mention/mention.html.twig
+++ b/templates/mention/mention.html.twig
@@ -11,39 +11,13 @@
     {% include('_partial/_navbar_mention.html.twig') %}
     <!-- Navbar End -->
 
-    <div class="container-xxl py-6 pb-5" id="mention">
-        <div class="container">
-            <div class="row g-5">
-                <!-- Le titre principal déplacé au-dessus du texte et centré -->
-                <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.1s">
-                    <h1 class="display-5 mb-5 text-center">Mentions Légales</h1>
-                </div>
-                <!-- Début des informations légales -->
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="mb-4"><strong>Conformément aux obligations</strong> de l'article 6-III et 19 de la Loi numéro 2004-575 du 21 juin 2004 relative à la Confiance dans l'économie numérique, dite L.C.E.N., nous portons à la connaissance des utilisateurs du site : jeromesauvage.fr les informations ci-jointes :</p>
-                    <h2>1. Déclaration légale</h2>
-                    <p><strong>Propriétaire</strong> : Jérôme Sauvage</p>
-                    <p><strong>Adresse</strong> : Rue du Bois, 50110 - Cherbourg-en-Cotentin</p>
-                    <p><strong>Créateur</strong> : Sauvage Jérôme</p>
-                    <p><strong>Responsable de publication</strong> : Sauvage Jérôme</p>
-                    <p><strong>Contact Responsable</strong> : jerome.sauvage@etu.unilm.fr</p>
-                    <h2>2. Présentation et principe</h2>
-                    <p>Tout internaute se connectant et utilisant le site jeromesauvage.fr est considéré comme utilisateur du site. Le site regroupe des services qui doivent être utilisés de manière courtoise, en respectant les autres utilisateurs et le webmaster. Le contenu est régulièrement mis à jour par Jérôme Sauvage.</p>
-                    <h2>3. Accessibilité</h2>
-                    <p>Le site jeromesauvage.fr est accessible 24/24h et 7/7j, sauf en cas de maintenance ou de force majeure. En cas d'indisponibilité, des efforts seront faits pour rétablir l'accès rapidement.</p>
-                </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h2>4. Propriété intellectuelle</h2>
-                    <p>Tous les éléments du site (structure, textes, images, sons) sont la propriété exclusive de Jérôme Sauvage. Toute reproduction est interdite sans autorisation écrite préalable.</p>
-                    <h2>5. Liens hypertextes et cookies</h2>
-                    <p>Le site contient des liens vers d'autres sites, mais Jérôme Sauvage ne peut vérifier le contenu des sites externes et décline toute responsabilité. Des cookies peuvent s'installer automatiquement lors de la navigation. Vous pouvez configurer votre navigateur pour les bloquer.</p>
-                    <h2>6. Gestion des données personnelles</h2>
-                    <p>Les données personnelles sont protégées par les lois françaises. Aucun renseignement personnel n'est collecté sans l'accord explicite de l'utilisateur. Conformément à la loi, vous disposez d'un droit d'accès, de rectification et de suppression des données vous concernant en contactant : jerome.sauvage@etu.unilm.fr.</p>
-                    <p>Pour plus d'informations, consultez notre <a href="https://jeromesauvage.fr/politique-de-confidentialité">politique de confidentialité</a>.</p>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- Header Start -->
+    {% include('_partial/_header_mention.html.twig') %}
+    <!-- Header End -->
+
+    <!-- Mention Start -->
+    {% include('_partial/_mention.html.twig') %}
+    <!-- Mention End -->
 
     <!-- Copyright Start -->
     {% include('_partial/_copyright.html.twig') %}
