update project section

--- a/templates/_partial/_expertise.html.twig
+++ b/templates/_partial/_expertise.html.twig
@@ -8,7 +8,7 @@
                 <p class="mb-4">Toujours curieux et en quête de nouvelles connaissances, je débute actuellement une formation en cybersécurité pour renforcer mes compétences en protection des infrastructures et données.</p>
                 <p class="mb-4">J’apprécie le travail en équipe, le respect des bonnes pratiques, et l’innovation. À l’écoute de nouvelles opportunités, je souhaite mettre mon sens de l’écoute, mon esprit de partage et ma rigueur au service de votre organisation.</p>
                 <div class="d-flex align-items-center pt-5">
-                    <a href="" class="btn btn-primary py-3 px-4 me-5">Télécharger mon CV</a>
+                    <a href="{{ asset('assets/upload/pdf/CV_Jérôme_Sauvage.pdf') }}" class="btn btn-primary py-3 px-4 me-5" target="_blank">Télécharger mon CV</a>
                 </div>
             </div>
 
