--- a/templates/_partial/_project.html.twig
+++ b/templates/_partial/_project.html.twig
@@ -15,28 +15,31 @@
         <div class="row g-4 portfolio-container wow fadeInUp" data-wow-delay="0.1s">
             <div class="col-lg-4 col-md-6 portfolio-item first">
                 <div class="portfolio-img rounded overflow-hidden">
-                    <img class="img-fluid" src="{{ asset('assets/img/blog_500x500.png') }}" alt="">
+                    <img class="img-fluid" src="{{ asset('assets/img/blog_2000x2000.jpg') }}" alt="">
                     <div class="portfolio-btn">
-                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="{{ asset('assets/img/blog_500x500.png') }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i class="fa fa-link"></i></a>
+                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="{{ asset('assets/img/blog_2000x2000.jpg') }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1 disabled" href=""><i class="fa fa-link"></i></a>
+                        <P class="text-white">Projet en cours de migration</P>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item second">
                 <div class="portfolio-img rounded overflow-hidden">
-                    <img class="img-fluid" src="{{ asset('assets/img/chalets_et_caviar_500x500.png') }}" alt="">
+                    <img class="img-fluid" src="{{ asset('assets/img/chalets_et_caviar_2000x2000.jpg') }}" alt="">
                     <div class="portfolio-btn">
-                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="{{ asset('assets/img/chalets_et_caviar_500x500.png') }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i class="fa fa-link"></i></a>
+                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="{{ asset('assets/img/chalets_et_caviar_2000x2000.jpg') }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1 disabled" href=""><i class="fa fa-link"></i></a>
+                        <P class="text-white">Projet en cours de migration</P>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item first">
                 <div class="portfolio-img rounded overflow-hidden">
-                    <img class="img-fluid" src="{{ asset('assets/img/snowtricks_500x500.png') }}" alt="">
+                    <img class="img-fluid" src="{{ asset('assets/img/snowtricks_2000x2000.jpg') }}" alt="">
                     <div class="portfolio-btn">
-                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="{{ asset('assets/img/snowtricks_500x500.png') }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i class="fa fa-link"></i></a>
+                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="{{ asset('assets/img/snowtricks_2000x2000.jpg') }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1 disabled" href=""><i class="fa fa-link"></i></a>
+                        <P class="text-white">Projet en cours de refonte</P>
                     </div>
                 </div>
             </div>
@@ -51,10 +54,11 @@
             </div>#}
             <div class="col-lg-4 col-md-6 portfolio-item first">
                 <div class="portfolio-img rounded overflow-hidden">
-                    <img class="img-fluid" src="{{ asset('assets/img/marketdigidoc_500x500.png') }}" alt="">
+                    <img class="img-fluid" src="{{ asset('assets/img/marketdigidoc_2000x2000.jpg') }}" alt="">
                     <div class="portfolio-btn">
-                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="{{ asset('assets/img/marketdigidoc_500x500.png') }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i class="fa fa-link"></i></a>
+                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="{{ asset('assets/img/marketdigidoc_2000x2000.jpg') }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1 disabled" href=""><i class="fa fa-link"></i></a>
+                        <P class="text-white">Projet en cours de refonte</P>
                     </div>
                 </div>
             </div>
