--- a/templates/_partial/_service.html.twig
+++ b/templates/_partial/_service.html.twig
@@ -6,7 +6,7 @@
                 <h1 class="display-5 mb-0">Compétences Techniques</h1>
             </div>
             <div class="col-lg-6 text-lg-end">
-                <a class="btn btn-primary py-3 px-5" href="">Me contacter</a>
+                <a class="btn btn-primary py-3 px-5" href="#contact">Me contacter</a>
             </div>
         </div>
 
