--- a/templates/_partial/_contact.html.twig
+++ b/templates/_partial/_contact.html.twig
@@ -5,7 +5,7 @@
                 <h1 class="display-5 mb-0">Travaillons ensemble</h1>
             </div>
             <div class="col-lg-6 text-lg-end">
-                <a class="btn btn-primary py-3 px-5" href="#contact-form">Discutons de votre projet</a>
+                <a class="btn btn-primary py-3 px-5" href="{{ asset('assets/upload/pdf/CV_Jérôme_Sauvage.pdf') }}" target="_blank">Téléchrger mon CV</a>
             </div>
         </div>
         <div class="row g-5">
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                <p class="mb-4">Contactez-moi.</p>
+                <p class="mb-4">Discutons de votre projet.</p>
                 <form id="contact-form"  action="{{ path('app_home') }}" method="post">
                     <div class="row g-3">
                         {% include('_partial/_form.html.twig') %}
