--- a/templates/_partial/_header.html.twig
+++ b/templates/_partial/_header.html.twig
@@ -7,7 +7,7 @@
                 <h2 class="typed-text-output d-inline"></h2>
                 <div class="typed-text d-none">Informaticien passionné, développeur d'applications, support et accompagnement de l'utilisateur</div>
                 <div class="d-flex align-items-center pt-5">
-                    <a href="" class="btn btn-primary py-3 px-4 me-5">Télécharger mon CV</a>
+                    <a href="{{ asset('assets/upload/pdf/CV_Jérôme_Sauvage.pdf') }}" class="btn btn-primary py-3 px-4 me-5" target="_blank">Télécharger mon CV</a>
                     {#                        <button type="button" class="btn-play" data-bs-toggle="modal"#}
                     {#                                data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">#}
                     {#                            <span></span>#}
