update mention section

--- a/templates/_partial/_mention.html.twig
+++ b/templates/_partial/_mention.html.twig
@@ -13,7 +13,7 @@
                 <h2><i class="fas fa-file-alt"></i> 1. Déclaration légale</h2>
                 <hr class="separator">
                 <p><strong>Propriétaire</strong> : Jérôme Sauvage</p>
-                <p><strong>Adresse</strong> : Rue du Bois, 50110 - Cherbourg-en-Cotentin</p>
+                <p><strong>Adresse</strong> : Cherbourg-en-Cotentin</p>
                 <p><strong>Créateur</strong> : Sauvage Jérôme</p>
                 <p><strong>Responsable de publication</strong> : Sauvage Jérôme</p>
                 <p><strong>Contact Responsable</strong> : jerome.sauvage@etu.unilm.fr</p>
