--- a/templates/_partial/_politique.html.twig
+++ b/templates/_partial/_politique.html.twig
@@ -19,7 +19,7 @@
                 <hr class="separator">
                 <p><strong>Responsable du traitement des données :</strong></p>
                 <p>Nom : Jérôme Sauvage</p>
-                <p>Adresse : 7 rue du Bois 50110 Cherbourg-en-Cotenitn</p>
+                <p>Adresse :Cherbourg-en-Cotenitn</p>
                 <p>Email : jerome.sauvage@etu.unilim.fr</p>
                 <p>Pour toute question concernant la gestion de vos données personnelles, vous pouvez nous contacter aux coordonnées ci-dessus.</p>
             </div>
@@ -111,7 +111,7 @@
             <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.1s">
                 <h2><i class="fas fa-server"></i>ARTICLE 10 : HÉBERGEMENT DES DONNÉES</h2>
                 <hr class="separator">
-                <p>Le site est hébergé par [Nom de l’hébergeur], à l’adresse suivante : [Adresse du siège de l’hébergeur].</p>
+                <p>Le site est hébergé par o2switch, à l’adresse suivante : Chemin des Pardiaux 63000 Clermont-Ferrand.</p>
             </div>
 
             <!-- ARTICLE 11 -->
