--- a/templates/_partial/_expertise.html.twig
+++ b/templates/_partial/_expertise.html.twig
@@ -94,6 +94,9 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-6 text-lg-end">
+                        <a class="btn btn-primary py-3 px-5" href="http://jeromesauvage.fr/">Me contacter</a>
+                    </div>
                 </div>
             </div>
         </div>
