--- a/templates/_partial/_project.html.twig
+++ b/templates/_partial/_project.html.twig
@@ -19,7 +19,7 @@
                     <div class="portfolio-btn">
                         <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="{{ asset('assets/img/blog_2000x2000.jpg') }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                         <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1 disabled" href=""><i class="fa fa-link"></i></a>
-                        <P class="text-white">Projet en cours de migration</P>
+                        <P class="text-white">Migration en cours d’un blog développé en PHP vers une architecture plus performante sous Symfony, avec optimisation de la gestion des données et amélioration de la sécurité.</P>
                     </div>
                 </div>
             </div>
@@ -29,7 +29,7 @@
                     <div class="portfolio-btn">
                         <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="{{ asset('assets/img/chalets_et_caviar_2000x2000.jpg') }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                         <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1 disabled" href=""><i class="fa fa-link"></i></a>
-                        <P class="text-white">Projet en cours de migration</P>
+                        <P class="text-white">Migration de Châlets et Caviar, un site WordPress vers une version plus performante, avec mise à jour des plugins, amélioration de la sécurité, et optimisation de la vitesse de chargement pour une meilleure expérience utilisateur.</P>
                     </div>
                 </div>
             </div>
@@ -39,7 +39,7 @@
                     <div class="portfolio-btn">
                         <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="{{ asset('assets/img/snowtricks_2000x2000.jpg') }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                         <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1 disabled" href=""><i class="fa fa-link"></i></a>
-                        <P class="text-white">Projet en cours de refonte</P>
+                        <P class="text-white">Refonte complète de l’application Snowtricks pour optimiser les performances, intégrer une gestion avancée des médias et améliorer la compatibilité mobile.</P>
                     </div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                     <div class="portfolio-btn">
                         <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="{{ asset('assets/img/marketdigidoc_2000x2000.jpg') }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                         <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1 disabled" href=""><i class="fa fa-link"></i></a>
-                        <P class="text-white">Projet en cours de refonte</P>
+                        <P class="text-white">Refonte de l’application Marketdigidoc, axée sur l'amélioration de la gestion électronique des documents, la sécurité des données et l’intégration de fonctionnalités de collaboration en temps réel.</P>
                     </div>
                 </div>
             </div>
