--- a/templates/base.mention.html.twig
+++ b/templates/base.mention.html.twig
@@ -150,6 +150,12 @@
 <script src="{{ asset('assets/js/bootstrap.bundle.min.js') }}"></script>
 <script src="{{ asset('assets/lib/wow/wow.min.js') }}"></script>
 <script src="{{ asset('assets/lib/easing/easing.min.js') }}"></script>
+<script src="{{ asset('assets/lib/waypoints/waypoints.min.js') }}"></script>
+<script src="{{ asset('assets/lib/typed/typed.min.js') }}"></script>
+<script src="{{ asset('assets/lib/counterup/counterup.min.js') }}"></script>
+<script src="{{ asset('assets/lib/owlcarousel/owl.carousel.min.js') }}"></script>
+<script src="{{ asset('assets/lib/isotope/isotope.pkgd.min.js') }}"></script>
+<script src="{{ asset('assets/lib/lightbox/js/lightbox.min.js') }}"></script>
 
 <!-- Template Javascript -->
 <script src="{{ asset('assets/js/main-mention.js') }}"></script>
