--- a/templates/politique/politique.html.twig
+++ b/templates/politique/politique.html.twig
@@ -8,6 +8,10 @@
     <!-- Spinner End -->
 
     <!-- Navbar Start -->
+    {% include('_partial/_navbar_mention.html.twig') %}
+    <!-- Navbar End -->
+
+    <!-- Navbar Start -->
     {% include('_partial/_header_mention.html.twig') %}
     <!-- Navbar End -->
 
