--- a/templates/_partial/_navbar_mention.html.twig
+++ b/templates/_partial/_navbar_mention.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
+<nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 fadeIn" data-wow-delay="0.1s" >
     <a href="{{ path('app_home') }}" class="navbar-brand d-block d-lg-none">
         <h1 class="text-primary fw-bold m-0">Jérôme Sauvage</h1>
     </a>
